# lancedb-test

./: .gitignore  Cargo.toml  README.md
docs/: simple.rs.md
src/: db.rs  main.rs
tests/fixtures/: mobi-dick.txt
